WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
321428
[JSC] Adjust / Fix wasm limit numbers
https://bugs.webkit.org/show_bug.cgi?id=321428
Summary
[JSC] Adjust / Fix wasm limit numbers
Yusuke Suzuki
Reported
2026-08-10 03:40:35 PDT
...
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2026-08-10 03:40:43 PDT
<
rdar://problem/184501304
>
Yusuke Suzuki
Comment 2
2026-08-10 03:41:33 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/71282
EWS
Comment 3
2026-08-10 11:20:28 PDT
Committed
318917@main
(2194da86b382): <
https://commits.webkit.org/318917@main
> Reviewed commits have been landed. Closing PR #71282 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug