[JSC] Adjust / Fix wasm limit numbers https://bugs.webkit.org/show_bug.cgi?id=321428 rdar://184501304

Reviewed by Sosuke Suzuki.

This patch adjusts / fixes wasm limit numbers we are using based on the
spec.

Tests: JSTests/wasm/stress/table-initial-upper-bound.js
       JSTests/wasm/stress/tag-section-limit.js

* JSTests/wasm/stress/table-initial-upper-bound.js: Added.
* JSTests/wasm/stress/table64-maximum.js:
(assert.eq.instance.exports.grow):
* JSTests/wasm/stress/tag-section-limit.js: Added.
(leb):
(moduleWithTags):
* JSTests/wasm/v8/table.js:
(TestConstructor):
* Source/JavaScriptCore/wasm/WasmLimits.h:
* Source/JavaScriptCore/wasm/WasmSectionParser.cpp:
(JSC::Wasm::SectionParser::parseIndexCountForElementSection):
(JSC::Wasm::SectionParser::parseException):
* Source/JavaScriptCore/wasm/WasmTable.h:
(JSC::Wasm::Table::isValidLength):
* Source/JavaScriptCore/wasm/js/WebAssemblyTableConstructor.cpp:
(JSC::JSC_DEFINE_HOST_FUNCTION):

Canonical link: https://commits.webkit.org/318917@main