Source/JavaScriptCore/wasm/WasmSectionParser.cpp
@@ -1270,11 +1270,11 @@ auto SectionParser::parseElementKind(uint8_t& resultElementKind) -> PartialResul
 
 auto SectionParser::parseIndexCountForElementSection(uint32_t& resultIndexCount, const unsigned elementNum) -> PartialResult
 {
-    static_assert(maxTableInitializationEntries < std::numeric_limits<uint32_t>::max());
+    static_assert(maxTableEntries < std::numeric_limits<uint32_t>::max());
 
     uint32_t indexCount;
     WASM_PARSER_FAIL_IF(!parseVarUInt32(indexCount), "can't get "_s, elementNum, "th index count for Element section"_s);
-    WASM_PARSER_FAIL_IF(indexCount > maxTableInitializationEntries, "Element section's "_s, elementNum, "th index count of "_s, indexCount, " is too big, maximum "_s, maxTableInitializationEntries);
+    WASM_PARSER_FAIL_IF(indexCount > maxTableEntries, "Element section's "_s, elementNum, "th index count of "_s, indexCount, " is too big, maximum "_s, maxTableEntries);
     resultIndexCount = indexCount;
 
     return { };
@@ -1450,7 +1450,7 @@ auto SectionParser::parseException() -> PartialResult
 {
     uint32_t exceptionCount;
     WASM_PARSER_FAIL_IF(!parseVarUInt32(exceptionCount), "can't get Exception section's count"_s);
-    WASM_PARSER_FAIL_IF(exceptionCount > maxExceptions, "Export section's count is too big "_s, exceptionCount, " maximum "_s, maxExceptions);
+    WASM_PARSER_FAIL_IF(exceptionCount > maxExceptions, "Exception section's count is too big "_s, exceptionCount, " maximum "_s, maxExceptions);
     RELEASE_ASSERT(!m_info->internalExceptionTypeSignatureIndices.capacity());
     WASM_ALLOCATOR_FAIL_IF(!m_info->internalExceptionTypeSignatureIndices.tryReserveInitialCapacity(exceptionCount), "can't allocate enough memory for "_s, exceptionCount, " exceptions"_s);
 
