Source/JavaScriptCore/wasm/WasmTable.h
@@ -81,7 +81,7 @@ public:
     Wasm::AddressType addressType() const { return m_addressType; }
     FuncRefTable* NODELETE asFuncrefTable();
 
-    static bool isValidLength(uint64_t length) { return length < maxTableEntries; }
+    static bool isValidLength(uint64_t length) { return length <= maxTableEntries; }
 
     void clear(uint32_t);
     void set(uint32_t, JSValue);
