Source/JavaScriptCore/wasm/js/WebAssemblyTableConstructor.cpp
@@ -115,10 +115,10 @@ JSC_DEFINE_HOST_FUNCTION(constructJSWebAssemblyTable, (JSGlobalObject* globalObj
     uint64_t initial64 = addressValueToUint64(globalObject, initialSizeValue, addressType);
     RETURN_IF_EXCEPTION(throwScope, encodedJSValue());
 
-    if (initial64 > Wasm::maxTableInitializationEntries)
-        return throwVMRangeError(globalObject, throwScope, WTF::makeString("WebAssembly.Table 'initial' value is above the upper bound "_s, Wasm::maxTableInitializationEntries));
+    if (!Wasm::Table::isValidLength(initial64))
+        return throwVMRangeError(globalObject, throwScope, WTF::makeString("WebAssembly.Table 'initial' value is above the upper bound "_s, Wasm::maxTableEntries));
 
-    uint32_t initial = initial64;
+    uint32_t initial = static_cast<uint32_t>(initial64);
 
     // In WebIDL, "present" means that [[Get]] result is undefined, not [[HasProperty]] result.
     // https://webidl.spec.whatwg.org/#idl-dictionaries
